# study_vello

./: .gitignore  Cargo.toml  finner.wgsl  rust-toolchain.toml  wroking_notes.txt
.cargo/: config.toml
crates/encoding/: Cargo.toml
crates/encoding/src/: clip.rs  config.rs  draw.rs  encoding.rs  glyph_cache.rs  lib.rs  math.rs  path.rs  resolve.rs
crates/shaders/: Cargo.toml
crates/shaders/src/compile/: mod.rs  preprocess.rs
examples/assets/google_fonts/: Tiger_P.json  character_animation2.json  character_test.json  character_test_new.json  walking_circle.json
examples/headless/src/: main.rs
examples/scenes/: Cargo.toml
examples/scenes/src/: download.rs  lib.rs  lottie.rs  mmark.rs  simple_text.rs  svg.rs  test_scenes.rs
examples/scenes/src/download/: default_downloads.rs
examples/webpack/: README.md  package.json  webpack.config.js
examples/webpack/js/: index.js
examples/webpack/static/: index.html
examples/with_bevy/: Cargo.toml
examples/with_bevy/src/: main.rs
examples/with_rapier2d/: Cargo.toml
examples/with_rapier2d/src/: main.rs
examples/with_winit/: Cargo.toml  make_webpack.ps1
examples/with_winit/src/: lib.rs  main.rs  stats.rs
integrations/velato/: Cargo.toml
integrations/velato/src/import/: builders.rs  converters.rs
integrations/velato/src/runtime/: mod.rs  render.rs
integrations/velato/src/runtime/model/: animated.rs  fixed.rs  mod.rs  value.rs
integrations/vello_svg/: Cargo.toml
integrations/vello_svg/src/: lib.rs  util.rs
shader/: backdrop.wgsl  backdrop_dyn.wgsl  bbox_clear.wgsl  binning.wgsl  clip_leaf.wgsl  clip_reduce.wgsl  coarse.wgsl  coarse_counter.wgsl  coarse_original.wgsl  coarse_setup.wgsl  coarse_setup_debug.wgsl  compose.wgsl  compose_original.wgsl  draw_leaf.wgsl  fine.wgsl  fine_original.wgsl  fine_setup.wgsl  fine_setup_original.wgsl  flatten.wgsl  particles.wgsl  path_coarse.wgsl  path_coarse_counter.wgsl  path_coarse_full.wgsl  path_count.wgsl  path_count_setup.wgsl  pathseg.wgsl  pattern.wgsl  pattern_setup.wgsl  patterns.wgsl  pp_adhoc.wgsl  pp_adhoc1.wgsl  tile_alloc.wgsl
shader/shared/: bbox.wgsl  blend.wgsl  bump.wgsl  clip.wgsl  config.wgsl  cubic.wgsl  drawtag.wgsl  fp64.wgsl  pathtag.wgsl  ptcl.wgsl  segment.wgsl  tile.wgsl  transform.wgsl
src/: cpu_dispatch.rs  engine.rs  glyph.rs  lib.rs  render.rs  scene.rs  shaders.rs  util.rs  wgpu_engine.rs
src/cpu_shader/: mod.rs  pattern.rs
