[workspace]
resolver = "2"

members = [
    "crates/encoding",
    "crates/shaders",

    "integrations/vello_svg",

    "examples/headless",
    "examples/with_winit",
    "examples/with_bevy",
    "examples/run_wasm",
    "examples/scenes",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "MIT OR Apache-2.0"
# homepage = "https://vello.dev" - Domain owned by us, but unused at present
# rust-version = 
repository = "https://github.com/linebender/vello"

[package]
name = "vello"
description = "An experimental GPU compute-centric 2D renderer"
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics"]

# This crate is intended for publishing, but not ready yet
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["wgpu", "ptcl_segmentation"]
hot_reload = []
buffer_labels = []
wgpu-profiler = ["dep:wgpu-profiler"]
# Enables support for ptcl segmentation, ptcls' for each tile will
# be break into fixed sized piece, and processed concurrently
ptcl_segmentation = ["vello_encoding/ptcl_segmentation"]
# Enables support for coarse segmentation with ptcl_segmentation, the process of generating
# ptcls' for each tile will be break into fixed sized piece will be processed concurrently
coarse_segmentation = ["ptcl_segmentation", "vello_encoding/coarse_segmentation"]

[dependencies]
bytemuck = { workspace = true }
fello = { workspace = true }
peniko = { workspace = true }
wgpu = { workspace = true, optional = true }
raw-window-handle = "0.5"
futures-intrusive = "0.5.0"
vello_encoding = { path = "crates/encoding" }
wgpu-profiler = { workspace = true, optional = true }

[workspace.dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
fello = { git = "https://github.com/dfrg/fount", rev = "dadbcf75695f035ca46766bfd60555d05bd421b1" }
peniko = { git = "https://github.com/linebender/peniko", rev = "cafdac9a211a0fb2fec5656bd663d1ac770bcc81" }

# NOTE: Make sure to keep this in sync with the version badge in README.md
wgpu = { version = "0.19.3" }                                              


# Used for examples
clap = "4.1.0"
anyhow = "1.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
pollster = "0.3.0"
wgpu-profiler = "0.16.1"
