[package]
name = "scenes"
description = "Vello scenes used in the other examples"
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vello = { path = "../../" }
vello_svg = { path = "../../integrations/vello_svg" }
velato = {path = "../../integrations/velato"}
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
image = "0.24.5"
rand = "0.8.5"
instant = { workspace = true }

# Used for the `download` command
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
byte-unit = "4.0.19"
inquire = "0.7"
ureq = "2.9.6"
