[package]
name = "with_winit"
description = "An example using vello to render to a winit window"
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "with_winit"
crate-type = ["cdylib", "lib"]

[[bin]]
# Stop the PDB collision warning on windows
name = "with_winit_bin"
path = "src/main.rs"

[features]
default = []
# Enable the use of wgpu-profiler. This is an optional feature for times when we use a git dependency on
# wgpu (which means the dependency used in wgpu-profiler would be incompatible)
wgpu-profiler = ["dep:wgpu-profiler", "vello/wgpu-profiler"]

[dependencies]
vello = { path = "../../", features = ["buffer_labels"] }
scenes = { path = "../scenes" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
instant = { workspace = true }
pollster = { workspace = true }
wgpu-profiler = { workspace = true, optional = true }

wgpu = { workspace = true }
winit = "0.29.15"
env_logger = "0.10.0"
log = "0.4.17"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
vello = { path = "../../", features = ["hot_reload"] }
notify-debouncer-mini = "0.3"


[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.28", features = ["android-native-activity"] }
android_logger = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["HtmlCollection", "Text"] }
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.65"
softbuffer = "0.3.0"
js-sys = "0.3.64"
