[package]
# from version 0.1.1
name = "velato"
description = "A Lottie integration for vello."
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics", "vello", "animation", "lottie"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vello = { path = "../../" }
usvg = "0.41.0"
image = { version = "0.25.0", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
] }
keyframe = "1.1.1"
once_cell = "1.19.0"
thiserror = "1.0.61"

# For the parser
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"